Fixed reveal break in mobile mode

--- a/hangMan.css
+++ b/hangMan.css
@@ -147,10 +147,12 @@ h2 {
     text-align: center;
     font-size: 3rem;
 }
-.reveal{
+
+.reveal {
     font-size: 2rem;
 }
-.bigger{
+
+.bigger {
     font-size: 2.3rem;
     text-decoration: underline;
 }
@@ -429,11 +431,13 @@ h2 {
     #btg {
         font-size: 2rem;
     }
-    .reveal{
-        font-size: 1.2rem;
+
+    .reveal {
+        font-size: 1.1rem;
     }
-    .bigger{
-        font-size: 1.4rem;
+
+    .bigger {
+        font-size: 1.2rem;
     }
 
     h3 {
